--- a/css/_base.scss
+++ b/css/_base.scss
@@ -2,4 +2,13 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 16px;
+    line-height: 24px;
+}
+
+@media (min-width: $breakpoint) {
+    .container {
+        display: grid;
+
+    }
 }
